# CS124PocketLawyer

./: CMakeLists.txt  CS124 Design and division of labor  CS124OtherProjectIdeas.md  InventoryLinearSearch.h  README.md  StockAlertManager.h  input.txt  inventoryLinearSearch.cpp  inventoryLinearSearch.h  linkedList.h  restockManager.cpp  sortingAlgo.h
include/: binarySearchTree.h  csvFunctions.h  itemType.h  linkedList.h  redBlackTree.h  restockManager.h  sortingAlgo.h  stockAlertManager.h
src/: binarySearchTree.cpp  csvFunctions.cpp  inventoryLinearSearch.cpp  itemType.cpp  linkedList.cpp  main.cpp  redBlackTree.cpp  restockManager.cpp  sortingAlgo.cpp  stockAlertManager.cpp
tests/: test.cpp  tests.cpp
